# openttd-packet-parsers

./: Cargo.toml  README.md
src/: client_get_list.rs  lib.rs  master_response_list.rs  newgrf.rs  server_detail_info.rs  server_register.rs  server_response.rs  server_unregister.rs  util.rs
