[package]
name = "openttd"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "Models and parsers for OpenTTD network protocol"
repository = "https://github.com/vorot93/openttd"
keywords = ["game", "games", "openttd"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
enum-map = "2"
chrono = "0.4"
maplit = "1"
nom = "7"
num_enum = "0.6"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4"
